# create-conductor-flow

./: .gitignore  .npmignore  .release-it.json  CHANGELOG.md  Cargo.toml  README.md  README_ja.md  README_ko.md  README_zh.md  gemini-conductor-codebase.tar  package-lock.json  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
.claude/: settings.local.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
coverage/: index.html  lcov.info
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
scripts/: bundle-conductor.ts  bundle-templates.ts  clean.ts  double-publish.ts  replace.js  replicate-gemini-conductor.md  update-readme.ts
src/: assets.rs  cli.rs  conductor-init.ts  conductor-install.ts  index.ts  main.rs  types.ts
tests/: agent-type-roo.test.ts  agent-type.test.ts  banner.test.ts  cli-e2e.test.ts  cli-git-ignore-flag.test.ts  cli-integration.test.ts  cli-structure.test.ts  conductor-init.test.ts  conductor-install.test.ts  config.test.ts  copy-templates-antigravity.test.ts  create-directories-antigravity.test.ts  dependencies.test.ts  e2e-install.test.ts  generator-workflow-files.test.ts  generators-utils.test.ts  git-ignore-integration.test.ts  git-repo-check.test.ts  install-command.test.ts  install-git-ignore.test.ts  install-path-fix_20260108.test.ts  install-utils.test.ts  migrate.test.ts  prompt-description.test.ts  prompt-git-ignore.test.ts  prompt-install-scope.test.ts  prompt.test.ts  protocol-resolution.test.ts  structure.test.ts  template-bundled.test.ts  (+8 more)
(+344 files in other folders)
