[package]
name = "conductor-4-all"
version = "0.1.0"
edition = "2024"
description = "A standalone command-line tool for the Conductor spec-driven development framework."
license = "MIT"
repository = "https://github.com/your-repo/conductor-4-all"
readme = "README.md"
keywords = ["conductor", "agent", "workflow", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
toml = "0.8"
inquire = "0.7"
